kclvm/query/src/snapshots/kclvm_query__tests__list_variables-5.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "b2": [
    {
      "name": "b2",
      "type_name": "",
      "op_sym": "=",
      "value": "False",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
