kclvm/query/src/snapshots/kclvm_query__tests__list_variables-6.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "s1": [
    {
      "name": "s1",
      "type_name": "",
      "op_sym": "=",
      "value": "\"Hello\"",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
